# panopticon

./: CONTRIBUTING.md  LICENSE  README.md  actionhandler.py  agent.py  asset.py  canvas.py  config.json  environment.py  game.py  game2.py  main.py  main2.py  missile_draft.py  pyproject.toml  setup.py  statesummarizer.py  units.py
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md  spike.md
.github/workflows/: development.yml
almost_depr/: asset.py  config_test.py  game.py
client/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
client/public/: index.html  manifest.json
client/src/: App.tsx  WelcomePopover.tsx  index.css  main.tsx  reportWebVitals.ts
client/src/client/: Client.ts  ClientComponent.tsx  ClientMessageHandler.ts  clientUtils.ts
client/src/data/: panopticon_scenario_756f7885-244e-4bf9-8d8e-42393d40489a.json
client/src/game/: Airbase.ts  Aircraft.ts  Base.ts  Doctrine.ts  Facility.ts  Game.ts  Relationships.ts  Scenario.ts  Side.ts  Weapon.ts
client/src/game/db/: Dba.ts  UnitDb.ts
client/src/game/engine/: weaponEngagement.ts
client/src/game/log/: SimulationLogs.ts
client/src/game/mission/: AerialRefuelingMission.ts  BaseMission.ts  PatrolMission.ts  StrikeMission.ts
client/src/game/playback/: PlaybackRecorder.ts  RecordingPlayer.ts
client/src/game/test/: Game.spec.js  Scenario.spec.js  Side.spec.ts
client/src/game/units/: Airbase.ts  Aircraft.ts  BaseUnit.ts  Facility.ts  ReferencePoint.ts  Ship.ts  Weapon.ts
client/src/gameComponents/: GameSession.tsx  MultiplayerGame.tsx  SingleplayerGame.tsx
client/src/gui/: ToolBar.tsx
client/src/gui/contexts/: ScenarioTimeContext.tsx  ToastContext.tsx
client/src/gui/map/: AirbaseCard.tsx  (+15 more)
client/src/providers/: CurrentScenarioTimeProvider.tsx  GameContextProvider.tsx
client/src/scenarios/: SCS.json  blank_scenario.json  default_scenario.json
client/src/styles/: ScenarioMap.css  index.css
client/src/test/: Aircraft.cpp.ts  App.spec.tsx  Scenario.cpp.ts  Side.cpp.ts  Simulation.cpp.ts
client/src/testing/: helpers.ts  setup.ts
client/src/tests/: Airbase.test.js  Aircraft.test.js  App.test.tsx  Facility.test.js  Game.test.js  Scenario.test.js  Ship.test.js  Side.test.js  Weapon.test.js  helpers.ts  utils.test.ts
client/src/utils/: colors.ts  constants.ts  dateTimeFunctions.ts  generateUUID.ts  mapFunctions.ts  utils.ts
client/tests/: utils.test.ts
depr/: canvas.py  oldcanvas.py  units.py
docs/: code_structure.rst  conf.py  getting_started.rst  index.rst
docs/Data_Model/: data_model.rst
docs/Gameplay/: gameplay.rst
docs/Getting_Started/: project_structure.rst  quick_start.rst  scripted_actions_walkthrough.rst
environments/panopticon_env/: environment.py
gym/: .gitignore  README.md  setup.py
gym/blade/: Doctrine.py  Game.py  Relationships.py  Scenario.py  Side.py  __init__.py
gym/blade/db/: UnitDb.py
gym/blade/engine/: weaponEngagement.py
gym/blade/envs/: __init__.py  blade.py
gym/blade/mission/: PatrolMission.py  StrikeMission.py
gym/blade/playback/: PlaybackRecorder.py  UpdateUnitTypes.py
gym/blade/scenarios/: SCS.json  blank_scenario.json  default_scenario.json
gym/blade/scripts/: demo.py
gym/blade/units/: Airbase.py  Aircraft.py  Facility.py  ReducedScenarioEncoder.py  ReferencePoint.py  Ship.py  Weapon.py
gym/blade/utils/: PlaybackRecorder.py  colors.py  constants.py  utils.py
gym/docs/: environment.md
gym/scripts/: demo.py  generate_load_test_scenario.py
gym/scripts/simple_demo/: demo.py  simple_demo.json
gym/scripts/stable_baselines/: scen.json  scen_x.json  train.py
panopticon/: main.py
panopticon/agents/: agent.py
panopticon/environments/panopticon_env/: actionhandler.py  canvas.py  environment.py  statesummarizer.py
server/: package-lock.json  package.json  tsconfig.json
server/src/: GameController.ts  Server.ts  ServerMessageHandler.ts  WebSocketServerWrapper.ts  constants.ts  index.ts  serverUtils.ts
server/src/game/: Game.ts  Scenario.ts  Side.ts
simulation/: .gitignore  CMakeLists.txt  README.md
simulation/bindings/wasm/: Embind.cpp
simulation/scripts/: compile_wasm.sh
simulation/src/core/: Coordinates.h  Scenario copy.h  Scenario.cpp  Scenario.h  Side.h
simulation/src/units/: Airbase.cpp  Airbase.h  Aircraft.cpp  Aircraft.h  MovableUnit.cpp  MovableUnit.h  Unit.h
simulation/src/utils/: Constants.h  GeoUtils.cpp  GeoUtils.h  MathUtils.cpp  MathUtils.h
simulation/tests/: CMakeLists.txt
simulation/tests/units/: AircraftTest.cpp  MovableUnitTest.cpp
simulation/tests/utils/: GeoUtilsTest.cpp  MathUtilsTest.cpp
src/: agent.py  environment.py  main.py
src/almost_depr/: asset.py  config_test.py  game.py
src/depr/: main.py  oldcanvas.py  units.py
(+101 files in other folders)
