[tool.poetry]
name = "panopticon"
version = "0.1.0"
description = "Simulates theater-level military operations for wargames and suggests dominant warfighting strategies to commanders"
authors = ["Minh <minhhua12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
